# sentence.io-service-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  serverless-compose.yml  serverless.yml
.github/workflows/: build-deploy.yml
events/: test.json
src/: main.rs  models.rs
test/: Cargo.toml  serverless.yml
test/src/: main.rs  models.rs
