[package]
name = "sentence_io_service_rust"
version = "0.1.0"
authors = ["Petar Petrov <ipetrovbg@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.4.1"
serde = "1.0.130"
serde_json = "1.0.69"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"