[package]
name = "sentence_io_service_test"
version = "0.1.0"
authors = ["Petar Petrov <ipetrovbg@gmail.com>"]
edition = "2021"
autobins = false

[dependencies]
serde = "1"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
simple_logger = "2.3"
log = "0.4"
serde_json = "1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"